
* SOLR-16755: bin/solr's '-noprompt' option no longer works for examples (hossman, janhoy, Houston Putman)

* SOLR-7609: Internal update requests should fail back to the client in some edge cases for shard splits. Use HTTP status 510 so the client can retry the operation. (Alex Deparvu, David Smiley, Tomás Fernández Löbbe)

Dependency Upgrades
---------------------
* PR#1494: Upgrade forbiddenapis to 3.5 (Uwe Schindler)

* SOLR-16642: Upgrade to Lucene 9.5.0 (Vinayak Hegde, David Smiley)

Other Changes
---------------------

* SOLR-16704: Add simple search benchmark to benchmark module (Tomás Fernández Löbbe)

* SOLR-16709: Update Solr's internal use of Solr Client Builders to use TimeUnit parameter for time specific builder methods. (Eric Pugh)

* SOLR-16713: Replace Guava usages with pure Java (Kevin Risden)

* SOLR-16716: Replace commons-io usages with pure Java (Kevin Risden)

* SOLR-16715: Replace new HashMap(int) and new HashSet(int) with CollectionUtil.newHashMap / CollectionUtil.newHashSet (Kevin Risden)

* SOLR-15703: replace all SolrException.log usage in Solr to just call log.error(...) directly (Kevin Risden)

* SOLR-16604: Use Solr Client Builders directly in unit tests instead of delegating to SolrTestCaseJ4. (Eric Pugh, David Smiley)

* SOLR-16735: Allow custom configuration of Jetty's SecureRequestCustomizer (Tomás Fernández Löbbe)

* PR#1567: Remove deprecated constructor in MetricsMap (janhoy)

* SOLR-16745: Consolidate DelegatedSolrQueryRequest and DelegatingSolrQueryRequest (Kevin Risden)

* PR#1566: Removed deprecated members from Tuple class (janhoy)

==================  9.2.0 ==================

New Features
---------------------

* SOLR-16435: Add Request timeout to Http2SolrClient (Tomás Fernández Löbbe)

* SOLR-16500: Added --enable-preview for JDK 19 to enable MemorySegment support in MMapDirectory (Kevin Risden)

* SOLR-16496: QueryElevationComponent now supports fq exclusions (Rudi Seitz via David Smiley)
